(feat): find-many users
