# server/dto/response.dto.go
@@ -1,5 +1,0 @@
-package dto
-
-type ErrorResponse struct {
-	Error string `json:"error" example:"Invalid input"`
-}
