# server/models/user.go
@@ -1,11 +1,0 @@
-package models
-
-import "gorm.io/gorm"
-
-type User struct {
-	gorm.Model
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-	Username  string `json:"username" gorm:"unique"`
-	Password  string `json:"password"`
-}
